update jvm set template